# 05-mtusi-netology

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
services/: benchmark_deepseek.py  benchmark_ner.py  benchmark_sentiment.py  hf_model_search.py
